06_layout-flexbox/style/style.css
@font-face {
  font-weight: 700;
  font-style: normal;
  font-family: "Muller";
  font-display: swap;
  src:
    local("Muller"),
    url("../fonts/MullerBold.woff2") format("woff2"),
    url("../fonts/MullerBold.woff") format("woff");
}

@font-face {
  font-weight: 500;
  font-style: normal;
  font-family: "Muller";
  font-display: swap;
  src:
    local("Muller"),
    url("../fonts/MullerMedium.woff2") format("woff2"),
    url("../fonts/MullerMedium.woff") format("woff");
}

@font-face {
  font-weight: 400;
  font-style: normal;
  font-family: "Muller";
  font-display: swap;
  src:
    local("Muller"),
    url("../fonts/MullerLight.woff2") format("woff2"),
    url("../fonts/MullerLight.woff") format("woff");
}

/* Fonts */

.visually-hidden {
  position: absolute;
  clip: rect(0 0 0 0);
  width: 1px;
  height: 1px;
  margin: -1px;
}

h2 {
  font-family: "Muller";
  font-weight: 400;
  font-size: 40px;
}

.header-tel {
  font-family: "Muller";
  font-weight: 500;
}

.header {
  font-family: "Muller";
  font-weight: 400;
  font-size: 16px;
}
.header-return {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.actions-button {
  font-family: "Muller";
  font-weight: 400;
  font-size: 16px
}

.offers-card-heading {
  font-family: Muller;
  font-weight: 700;
  font-size: 40px;
}

.luxury-heading {
  font-size: 60px;
}

.offers-card-price {
  font-family: Muller;
  font-weight: 400;
  font-size: 20px;
}

.link {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.about-text {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.servises-heading-link {
  font-family: Muller;
  font-weight: 500;
  font-size: 20px;
}

.service-card-text {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.advantage {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.placement-list {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.hotel-price {
  font-family: Muller;
  font-weight: 700;
  font-size: 20px;
}

.hotel-name {
  font-family: Muller;
  font-weight: 400;
  font-size: 16px;
}

.placement-more-link {
  font-family: Muller;
  font-weight: 500;
  font-size: 20px;
}

/* Global Settings */
* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

ul {
  margin: 0px;
  padding: 0px;
  list-style: none;
}

img {
  max-width: 100%;
}

.container {
  max-width: 1170px;
  margin: 0 auto;
  /* padding: 0px 15px; */
}

/* Header */
.header {
  padding-top: 30px;
  margin-bottom: 70px;
}

.header-top {
  display: flex;
  margin-bottom: 30px;
  align-items: center;
  justify-content: space-between;
}

.header-top-left {
  display: flex;
  align-items: center;
}

.header-logo {
  margin-right: 40px;
}

.nav {
  display: flex;
  padding: 27px 45px;
  align-items: center;
  justify-content: space-between;
}

.nav-list {
  display: flex;
}

.nav-item:not(:last-child) {
  margin-right: 45px;
}

.actions-button {
  padding: 13px 20px;
  border-radius: 10px;
}

.actions-button:not(:last-child) {
  margin-right: 40px;
}

/* Offers */
.offers {
margin-bottom: 69px;
}

.section-heading {
  margin-left: 40px;
}

.offers-heading {
  margin-bottom: 20px;
}

.offers-cards {
  display: flex;
  justify-content: space-between;
}

.offers-thumbs {
  width: 50%;
}

.offer {
  padding-top: 40px;
  padding-left: 40px;
  outline: 4px solid red;
}

.offer-maldives {
  height: 258px;
  margin-bottom: 23px;
}

.offer-crete_hote_tours {
  height: 258px;
}

.offer-big {
  width: 50%;
  margin-left: 23px;
  height: 540px;
}

.offer-rooms_luxury {
  height: 100%;
  padding-top: 208px;
}

.offers-card-heading {
  max-width: 299px;
  margin: 0px;
  margin-bottom: 13px;
}

.offers-card-price {
  margin-top: 0px;
  margin-bottom: 35px;
}

/* About */
.about {
  margin-bottom: 70px;
}

.about-heading {
  margin-bottom: 11px;
}

.about-text {
  max-width: 888px;
}

/* Services */
.services {
  margin-bottom: 70px;
}

.services-heading {
  margin-bottom: 20px;
}

.services-list {
  display: flex;
  flex-wrap: wrap;
}

.services-card {
  min-height: 330px;
  max-width: 573px;
  padding: 190px 126px 0px 45px;
  outline: 4px solid red;
  border-radius: 15px;
}

 .services-card:nth-child(odd) {
  margin-right: 23px;
}

.services-card-top {
  margin-bottom: 23px;
}

/* Advantages */
.advantages {
  margin-bottom: 70px;
}

.advantages-heading {
  margin-bottom: 30px;
}

.advantages-list {
  display: flex;
  flex-wrap: wrap;
}

.advantages-card {
  max-width: 275px;
  min-height: 275px;
  padding: 116px 42px 0px 45px;
  outline: auto;
}

.advantages-card:not(:nth-child(4)) {
  margin-right: 23px;
}

.advantages-card:nth-child(8) {
  margin-right: 0px;
}

.advantages-card:nth-child(-n+4) {
  margin-bottom: 23px;
}

 .advantage {
  line-height: 32px;
}

/* Placement */
.placement-heading {
  margin-bottom: 30px;
}

.placement-list {
  display: flex;
  flex-wrap: wrap;
}

.placement-card {
  min-width: 32%;
  min-height: 440px;
  border-radius: 15px;
  outline: auto;
}

.placement-card:not(:nth-child(3n)) {
 margin-right: 23px;
}

.placement-card:not(:nth-child(n+7)) {
  margin-bottom: 23px;
}

.placement-wrapper {
  /* Position меняется для позиционирования рейтинга */
  position: relative;
  padding: 31px 0px 0px 45px;
}

.hotel-descripction {
  margin: 0px;
}

.rating {
  display: flex;
  position: absolute;
  right: 46px;
  top: 40px;
}

.rating-star {
  width: 14px;
}

.rating-star:not(:last-child) {
  margin-right: 6px;
}

.hotel-name {
  margin-bottom: 16px;
}

.hotel-descripction {
  margin-bottom: 16px;
}

.hotel-rooms {
  padding: 13px 20px;
  border-radius: 15px;
}

.placement-card-more {
  position: relative;
}

.placement-more-link {
  position: absolute;
  left: 54px;
  bottom: 27px;
  border: none;
  background-color: transparent;
}

